--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl      = "https://m-1tZ.github.io"
+baseurl      = "https://blog.m1tz.com"
 title   = "Title"
 languageCode = "en-us"
 theme = "hello-friend-ng"
