--- a/hugo.toml
+++ b/hugo.toml
@@ -186,7 +186,7 @@ disableHugoGeneratorInject = false
 
 [languages]
   [languages.en]
-    subtitle  = "Subtitle"
+    subtitle  = "Vulnerabilities and security research"
     weight    = 1
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
 
