added CVE menu entry

--- a/hugo.toml
+++ b/hugo.toml
@@ -204,3 +204,7 @@ disableHugoGeneratorInject = false
     identifier = "posts"
     name       = "Posts"
     url        = "posts/"
+  [[menu.main]]
+    identifier = "cves"
+    name       = "CVEs"
+    url        = "cves/"
