--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseurl      = "https://blog.m1tz.com"
-title   = "m1tZ"
+title   = "m1tz"
 languageCode = "en-us"
 theme = "hello-friend-ng"
 
@@ -37,7 +37,7 @@ disableHugoGeneratorInject = false
   posts = "/posts/:year/:month/:title/"
 
 [author]
-  name = "m1tZ"
+  name = "m1tz"
 
 [blackfriday]
   hrefTargetBlank = true
