--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -32,7 +32,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.115.4
+      HUGO_VERSION: 0.124.1 #0.115.4
     steps:
       - name: Install Hugo CLI
         run: |
@@ -68,7 +68,7 @@ jobs:
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
       
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
