--- a/hugo.toml
+++ b/hugo.toml
@@ -36,12 +36,6 @@ disableHugoGeneratorInject = false
 [permalinks]
   posts = "/posts/:year/:month/:title/"
 
-[author]
-  name = "m1tz"
-
-[blackfriday]
-  hrefTargetBlank = true
-
 [taxonomies]
   tag      = "tags"
   category = "categories"
@@ -52,6 +46,9 @@ disableHugoGeneratorInject = false
   dateformShort   = "Jan 2"
   dateformNum     = "02-01-2006"
   dateformNumTime = "02-01-2006 15:04"
+
+  [params.author]
+    name = "m1tz"
 
   # Metadata mostly used in document's head
   # 
@@ -186,14 +183,12 @@ disableHugoGeneratorInject = false
 
 [languages]
   [languages.en]
-    subtitle  = "Vulnerabilities and security research"
     weight    = 1
-    copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
+    [languages.en.params]
+      subtitle  = "Vulnerabilities and security research"
+      copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
 
-#   [languages.fr]
-#     subtitle  = "Hello Friend NG Theme"
-#     weight    = 2
-#     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
+#rel="noopener">CC BY-NC 4.0</a>'
 
 [menu]
   [[menu.main]]
