--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -59,10 +59,11 @@ jobs:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
+        # --minify \
         run: |
           hugo \
             --gc \
-            --minify \
+            --forceSyncStatic \            
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
       
       - name: Upload artifact
