--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -58,12 +58,13 @@ jobs:
         env:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
-          HUGO_ENV: production
-        # --minify \
+          HUGO_ENV: production 
         run: |
           hugo \
             --gc \
-            --forceSyncStatic \    
+            --minify \
+            --forceSyncStatic \
+            --ignoreCache \    
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
       
       - name: Upload artifact
