--- a/hugo.toml
+++ b/hugo.toml
@@ -9,9 +9,6 @@ PygmentsStyle = "monokai"
 paginate  = 10
 rssLimit  = 10  # Maximum number of items in the RSS feed.
 
-subtitle  = "Vulnerabilities and security research"
-copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-
 # googleAnalytics = ""
 # disqusShortname = ""
 
@@ -48,6 +45,10 @@ disableHugoGeneratorInject = false
   dateformShort   = "Jan 2"
   dateformNum     = "02-01-2006"
   dateformNumTime = "02-01-2006 15:04"
+
+  subtitle  = "Vulnerabilities and security research"
+  copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank"
+  rel = "noopener">CC BY-NC 4.0</a>'
 
   [params.author]
     name = "m1tz"
@@ -98,7 +99,7 @@ disableHugoGeneratorInject = false
   # Integrate Javascript files or stylesheets by adding the url to the external assets or by
   # linking local files with their path relative to the static folder, e.g. "css/styles.css"
   #
-  customCSS = ["css/custom.css"]
+  customCSS = []
   customJS  = []
 
   # Toggle this option need to rebuild SCSS, requires extended version of Hugo
