--- a/hugo.toml
+++ b/hugo.toml
@@ -47,8 +47,8 @@ disableHugoGeneratorInject = false
   dateformNumTime = "02-01-2006 15:04"
 
   subtitle  = "Vulnerabilities and security research"
-  copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank"
-  rel = "noopener">CC BY-NC 4.0</a>'
+  copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank"'
+  rel = '"noopener">CC BY-NC 4.0</a>'
 
   [params.author]
     name = "m1tz"
