--- a/hugo.toml
+++ b/hugo.toml
@@ -132,8 +132,8 @@ disableHugoGeneratorInject = false
     theme = "#1b1c1d"
 
   [params.logo]
-    logoMark     = ""
-    logoText     = "$ cd /home/"
+    logoMark     = "$"
+    logoText     = "cd /home/"
     logoHomeLink = "/"
     # Set true to remove the logo cursor entirely.
     # logoCursorDisabled = false
