--- a/hugo.toml
+++ b/hugo.toml
@@ -133,7 +133,7 @@ disableHugoGeneratorInject = false
 
   [params.logo]
     logoMark     = "$"
-    logoText     = "cd /home/"
+    logoText     = "cd /home"
     logoHomeLink = "/"
     # Set true to remove the logo cursor entirely.
     # logoCursorDisabled = false
