--- a/hugo.toml
+++ b/hugo.toml
@@ -167,9 +167,21 @@ disableHugoGeneratorInject = false
     name = "twitter"
     url  = "https://twitter.com/_m1tZ"
 
-#   [[params.social]]
-#     name = "email"
-#     url  = "mailto:nobody@example.com"
+  [[params.social]]
+    name = "bluesky"
+    url  = "https://bsky.app/profile/m1tzzz.bsky.social"
+
+  [[params.social]]
+    name = "intigr"
+    url  = "https://app.intigriti.com/profile/m1tz"
+
+  [[params.social]]
+    name = "hackerone"
+    url  = "https://hackerone.com/m1tz?type=user"
+
+  [[params.social]]
+    name = "ycombinator"
+    url  = "https://yeswehack.com/hunters/m1tz"
 
   [[params.social]]
     name = "github"
