--- a/hugo.toml
+++ b/hugo.toml
@@ -209,5 +209,5 @@ disableHugoGeneratorInject = false
     url        = "posts/"
   [[menu.main]]
     identifier = "references"
-    name       = "Referencess"
+    name       = "References"
     url        = "references/"
